--- a/sanpham.css
+++ b/sanpham.css
@@ -229,7 +229,7 @@ div.box-text{
   color: black;
   font-size: 36px;
   font-family: 'Montserrat', sans-serif;
-  font-weight: 300;
+  font-weight: bolder;
 }
 /* .box-tittle > hr{
     position: absolute;
@@ -246,11 +246,11 @@ div.box-text{
 }
 .wrap-main::before{
   content: '';
-  width: 100%;
+  width: 70%;
   height: 1px;
   position: absolute;
   top: 50%;
-  left: 0;
+  left: 300px;
   background: #D3D2D2;
 }
 .wrap-main > a{
