--- a/service.css
+++ b/service.css
@@ -386,5 +386,5 @@ footer{
     text-align: right;
   }
   table.content tr:last-child{
-    text-align: right;asdasdasdasdasdasdsdasd
+    text-align: right;
   }
