--- a/style.css
+++ b/style.css
@@ -203,14 +203,14 @@ nav{
   padding: 30px;
 }
 p{
-  font-size: 15px;
-  font-family: 'Times New Roman', Times, serif;
+  font-size: 25px;
+  font-family: 'Montserrat', sans-serif;
   padding-top: 30px;
 }
 h4{
   margin: 20px;
   text-align: center;
-  font-weight: 600;
+  font-weight: 700;
 }
 div.inmain{
 display: flex;
@@ -228,6 +228,9 @@ hr{
   background: rgb(95, 95, 95);
   margin-top: 0;
   }
+  h4 >a {
+    font-size: 25px;
+  }
   h4 > a:hover{
     color:rgb(211, 219, 188);
     text-decoration: none;    
@@ -235,7 +238,7 @@ hr{
 
 /* HINH ANH VE CONG TRINH */
 div.cong-trinh{
-  height: 980px;
+  height: 100%;
   display: flex;
   width: 100%;
 }
@@ -380,4 +383,43 @@ button[type=button]{
 }
 table.content tr:last-child{
   text-align: right;
+}
+
+/*mobile*/
+.menu > ul{
+  overflow: hidden;
+}
+.icon {
+  display: none;
+}
+
+@media screen and (max-width: 600px) {
+  ul .item {
+    display: none;
+  }
+  ul a.icon {
+    float: right;
+    display: block;
+    padding: 16px;
+    font-size: 25px;
+  }
+  .phone{
+    display: none;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .topnav.responsive {
+    position: relative;
+  }
+  .topnav.responsive a.icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive li {
+    float: none;
+    display: block;
+    text-align: left;
+  }
 }
